--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 /* fontes */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* reset */
 * {
     margin: 0;
@@ -116,4 +118,28 @@ nav a::after {
 
 nav a:hover::after {
     width: 100%;
+}
+
+section.hero_section{
+    width: 100%;
+    height: 524px;
+    background-color: var(--cor-principal);
+    display: flex;
+
+}
+
+section.hero_section .texto-topo{
+    width: 50%;
+    height: 100%;
+    padding-left: 150px;
+    padding-top: 90px;
+}
+
+section.hero_section .texto-topo h2{
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 48px;
+    width: 300px;
+    color: var(--cor-clara);
 }
